@@ -1,10 +1,10 @@
 package nl.lexemmens.podman;
 
+import nl.lexemmens.podman.config.image.single.TestSingleImageConfigurationBuilder;
+import nl.lexemmens.podman.config.image.single.SingleImageConfiguration;
+import nl.lexemmens.podman.config.podman.PodmanConfiguration;
+import nl.lexemmens.podman.config.podman.TestPodmanConfigurationBuilder;
 import nl.lexemmens.podman.enumeration.TlsVerify;
-import nl.lexemmens.podman.image.ImageConfiguration;
-import nl.lexemmens.podman.image.PodmanConfiguration;
-import nl.lexemmens.podman.image.TestImageConfigurationBuilder;
-import nl.lexemmens.podman.image.TestPodmanConfigurationBuilder;
 import nl.lexemmens.podman.service.ContainerfileDecorator;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.logging.Log;
@@ -32,10 +32,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.*;
 import static org.mockito.MockitoAnnotations.initMocks;
@@ -59,7 +62,7 @@ public class BuildMojoTest extends AbstractMojoTest {
     @Test
     public void testSkipAllActions() throws MojoExecutionException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
         configureMojo(podman, image, false, true, false, false, true);
@@ -72,7 +75,7 @@ public class BuildMojoTest extends AbstractMojoTest {
     @Test
     public void testSkipBuild() throws MojoExecutionException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
         configureMojo(podman, image, false, false, true, false, true);
@@ -94,6 +97,53 @@ public class BuildMojoTest extends AbstractMojoTest {
     }
 
     @Test
+    public void testNoImageNameThrowsException() {
+        PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder(null).build();
+
+        configureMojo(podman, image, true, false, false, true, true);
+
+        try {
+            buildMojo.execute();
+            fail("Expected an exception, however none was thrown.");
+        } catch (Exception e) {
+            assertEquals("Image name must not be null, must be alphanumeric and may contain slashes, such as: valid/image/name", e.getMessage());
+        }
+    }
+
+    @Test
+    public void testNoStageConfigurationWhileCustomImageNameForStagesHasBeenSetToTrue() {
+        PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder(null).build();
+
+        configureMojo(podman, image, true, false, false, true, true);
+        image.setCustomImageNameForMultiStageContainerfile(true);
+
+        try {
+            buildMojo.execute();
+            fail("Expected an exception, however none was thrown.");
+        } catch (Exception e) {
+            assertEquals("Plugin is configured for multistage Containerfiles, but there are no custom image names configured.", e.getMessage());
+        }
+    }
+
+    @Test
+    public void testImageWithoutBuildSectionThrowsException() {
+        PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample-image").build();
+
+        configureMojo(podman, image, true, false, false, true, true);
+        image.setBuild(null);
+
+        try {
+            buildMojo.execute();
+            fail("Expected an exception, however none was thrown.");
+        } catch (Exception e) {
+            assertEquals("Missing <build/> section in image configuration!", e.getMessage());
+        }
+    }
+
+    @Test
     public void testBuildWithEmptyConfigsThrowsException() {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
         configureMojo(podman, null, true, false, false, true, true);
@@ -106,7 +156,7 @@ public class BuildMojoTest extends AbstractMojoTest {
     @Test
     public void testBuildWithoutTag() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
         configureMojo(podman, image, true, false, false, true, true);
@@ -116,18 +166,18 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
 
         buildMojo.execute();
 
         verify(log, Mockito.times(1)).info("Tagging container images is skipped.");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
     }
 
     @Test
     public void testBuildWithoutPodmanConfigurationDoesNotThrowException() throws MojoExecutionException, MavenFilteringException {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
         configureMojo(null, image, true, false, false, true, true);
@@ -137,19 +187,19 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
 
         Assertions.assertDoesNotThrow(() -> buildMojo.execute());
 
         verify(log, Mockito.times(1)).info("Tagging container images is skipped.");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
     }
 
     @Test
     public void testBuildCustomContainerfileWithoutTag() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfile("Containerfile")
                 .setContainerfileDir("src/test/resources/customdockerfile")
                 .build();
@@ -160,19 +210,19 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList("ca1f5f48ef431c0818d5e8797dfe707557bdc728fe7c3027c75de18f934a3b76"));
 
         buildMojo.execute();
 
         verify(log, Mockito.times(1)).info("Tagging container images is skipped.");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
     }
 
     @Test
     public void testBuildAndTaggingWithNullTags() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
         configureMojo(podman, image, true, false, false, false, true);
@@ -182,20 +232,20 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of("sha256:sampleimagehash"));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList("sha256:sampleimagehash"));
 
         buildMojo.execute();
 
         verify(log, Mockito.times(0)).info("Tagging container images is skipped.");
         verify(log, Mockito.times(1)).info("No tags specified. Skipping tagging of container images.");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
     }
 
     @Test
     public void testBuildAndTaggingWithEmptyTags() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .setTags(new String[]{})
                 .build();
@@ -206,20 +256,20 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of("sha256:sampleimagehash"));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList("sha256:sampleimagehash"));
 
         buildMojo.execute();
 
         verify(log, Mockito.times(0)).info("Tagging container images is skipped.");
         verify(log, Mockito.times(1)).info("No tags specified. Skipping tagging of container images.");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
     }
 
     @Test
     public void testBuildWithTag() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -234,7 +284,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of(imageHash));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList(imageHash));
 
         buildMojo.execute();
 
@@ -242,14 +292,14 @@ public class BuildMojoTest extends AbstractMojoTest {
         verify(log, Mockito.times(0)).info("No tags specified. Skipping tagging of container images.");
         verify(log, Mockito.times(1)).info("Tagging container image " + imageHash + " as " + expectedFullImageName);
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
         verify(podmanExecutorService, times(1)).tag(imageHash, expectedFullImageName);
     }
 
     @Test
     public void testBuildWithLatestTag() throws MojoExecutionException, MavenFilteringException {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .setTags(new String[]{})
                 .setCreateLatestTag(true)
@@ -264,7 +314,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(List.of(imageHash));
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(Collections.singletonList(imageHash));
 
         buildMojo.execute();
 
@@ -273,14 +323,14 @@ public class BuildMojoTest extends AbstractMojoTest {
         verify(log, Mockito.times(1)).info("Tagging container image " + imageHash + " as registry.example.com/sample:latest");
         verify(mavenFileFilter, Mockito.times(1)).copyFile(isA(MavenFileFilterRequest.class));
 
-        verify(podmanExecutorService, times(1)).build(isA(ImageConfiguration.class));
+        verify(podmanExecutorService, times(1)).build(isA(SingleImageConfiguration.class));
         verify(podmanExecutorService, times(1)).tag(imageHash, expectedFullImageName);
     }
 
     @Test
     public void testBuildContextNoContainerfile() {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -301,7 +351,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         String targetLocationAsString = targetLocation.normalize().toFile().getAbsolutePath();
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(containerFileDir)
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -319,7 +369,7 @@ public class BuildMojoTest extends AbstractMojoTest {
     @Test
     public void testBuildContextWithDefaultContainerfileDir() {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
                 .build();
@@ -344,7 +394,7 @@ public class BuildMojoTest extends AbstractMojoTest {
                 .setTlsVerify(TlsVerify.FALSE)
                 .setRunDirectory(new File(runDirectory))
                 .build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
                 .build();
@@ -363,7 +413,7 @@ public class BuildMojoTest extends AbstractMojoTest {
     @Test
     public void testBuildContextWithEmptyContainerfile() {
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/emptydockerfile")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -389,7 +439,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         Assertions.assertNotNull(buildOutputUnderTest);
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -401,7 +451,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(buildOutputUnderTest);
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(buildOutputUnderTest);
 
         buildMojo.execute();
 
@@ -442,7 +492,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         Assertions.assertNotNull(buildOutputUnderTest);
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"0.2.1"})
                 .setCreateLatestTag(false)
@@ -457,7 +507,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(buildOutputUnderTest);
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(buildOutputUnderTest);
 
         buildMojo.execute();
 
@@ -502,7 +552,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         Assertions.assertNotNull(buildOutputUnderTest);
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"0.2.1"})
                 .setCreateLatestTag(false)
@@ -517,7 +567,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(buildOutputUnderTest);
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(buildOutputUnderTest);
 
         buildMojo.execute();
 
@@ -562,7 +612,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         Assertions.assertNotNull(buildOutputUnderTest);
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"0.2.1"})
                 .setCreateLatestTag(false)
@@ -577,7 +627,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(buildOutputUnderTest);
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(buildOutputUnderTest);
 
         buildMojo.execute();
 
@@ -621,7 +671,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         Assertions.assertNotNull(buildOutputUnderTest);
 
         PodmanConfiguration podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.FALSE).build();
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"0.2.1"})
                 .setCreateLatestTag(false)
@@ -636,7 +686,7 @@ public class BuildMojoTest extends AbstractMojoTest {
         when(serviceHubFactory.createServiceHub(isA(Log.class), isA(MavenProject.class), isA(MavenFileFilter.class), isA(PodmanConfiguration.class), isA(Settings.class), isA(SettingsDecrypter.class))).thenReturn(serviceHub);
         when(serviceHub.getContainerfileDecorator()).thenReturn(containerfileDecorator);
         when(serviceHub.getPodmanExecutorService()).thenReturn(podmanExecutorService);
-        when(podmanExecutorService.build(isA(ImageConfiguration.class))).thenReturn(buildOutputUnderTest);
+        when(podmanExecutorService.build(isA(SingleImageConfiguration.class))).thenReturn(buildOutputUnderTest);
 
         buildMojo.execute();
 
@@ -667,13 +717,19 @@ public class BuildMojoTest extends AbstractMojoTest {
         verify(log, times(1)).info("Built container image.");
     }
 
-    private void configureMojo(PodmanConfiguration podman, ImageConfiguration image, boolean skipAuth, boolean skipAll, boolean skipBuild, boolean skipTag, boolean failOnMissingContainerFile) {
+    private void configureMojo(PodmanConfiguration podman, SingleImageConfiguration image, boolean skipAuth, boolean skipAll, boolean skipBuild, boolean skipTag, boolean failOnMissingContainerFile) {
         buildMojo.podman = podman;
         buildMojo.skip = skipAll;
         buildMojo.skipBuild = skipBuild;
         buildMojo.skipAuth = skipAuth;
         buildMojo.skipTag = skipTag;
-        buildMojo.images = image == null ? null : List.of(image);
+        if(image == null) {
+            buildMojo.images = null;
+        } else {
+            List<SingleImageConfiguration> imageConfigurations = new ArrayList<>();
+            imageConfigurations.add(image);
+            buildMojo.images = imageConfigurations;
+        }
         buildMojo.pushRegistry = "registry.example.com";
         buildMojo.failOnMissingContainerfile = failOnMissingContainerFile;
     }
